XSCOLIBRI-279: Box macro of type block with an icon displays the icon not vertically aligned with text, which makes it look odd Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/colibri@35702 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -1652,6 +1652,13 @@ ul.xlist li.xitem div.xitemcontainer ul.xlist {
   padding: 0 1px;
 }
 
+.box>*:first-child {
+  margin-top: 0;
+}
+.box>*:last-child {
+  margin-bottom: 0;
+}
+
 .code, .box {
   background-color: $theme.backgroundSecondaryColor;
   border: 1px dotted $theme.borderColor;
